tdf#163592 - sc fix Sort/SortBy function shows err504 instead of results

with a single row as sort array.

No Need to sort anything if we are sorting one row by rows or we are
sorting one column by columns, in that case we can just return the original
rows/columns to be sorted.

Change-Id: I59528854c7f203957dbc479b23473ce0f3c44d33
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/182085
Tested-by: Jenkins
Reviewed-by: Balazs Varga <balazs.varga.extern@allotropia.de>
(cherry picked from commit bafe4102742d2a3e2f5d81ba498035d2eefce371)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/182311
Reviewed-by: Xisco Fauli <xiscofauli@libreoffice.org>